# Software-Supply-Chain-on-Google-Cloud

./: .editorconfig  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  Makefile  NOTICE  README.md  README_slsa_bazel_gke_reference.md  WORKSPACE  docker-compose.yaml  go.mod  requests.py  skaffold.yaml  slsa_bazel_gke_reference_codex_prompt.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
api/gateway/: BUILD.bazel  Dockerfile  handlers.go  handlers_test.go  main.go
api/proto/: BUILD.bazel  platform.proto
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  styles.css
ci/cloudbuild/: build-all.yaml  gateway.yaml
ci/github/workflows/: ci.yaml
docs/: 00-architecture.md  01-local-dev.md  02-gcp-deploy.md  03-slsa-binary-auth.md  04-sbom-and-guac.md  05-opa-gatekeeper.md  06-observability.md  07-testing-e2e.md  08-troubleshooting.md
docs/dashboards/: service-latency.json
infra/helm/umbrella/: Chart.yaml  values.yaml
infra/helm/umbrella/charts/gateway/: Chart.yaml  values.yaml
infra/helm/umbrella/charts/gateway/templates/: _helpers.tpl  deployment.yaml  service.yaml
infra/helm/umbrella/charts/inventory/: Chart.yaml  values.yaml
infra/helm/umbrella/charts/inventory/templates/: _helpers.tpl  deployment.yaml  service.yaml
infra/helm/umbrella/charts/notifications/: Chart.yaml  values.yaml
infra/helm/umbrella/charts/notifications/templates/: _helpers.tpl  deployment.yaml  service.yaml
infra/helm/umbrella/charts/orders/: Chart.yaml  values.yaml
infra/helm/umbrella/charts/orders/templates/: _helpers.tpl  deployment.yaml  (+1 more)
infra/helm/umbrella/charts/payments/: Chart.yaml  values.yaml
infra/helm/umbrella/charts/users/: Chart.yaml  values.yaml
infra/helm/umbrella/charts/web/: Chart.yaml  values.yaml
infra/helm/umbrella/templates/: _helpers.tpl
infra/k8s/base/: gateway-deployment.yaml  gateway-service.yaml  kustomization.yaml  namespace.yaml
infra/k8s/base/config/: env-configmap.yaml  otel-collector-config.yaml
infra/k8s/base/gateway/: config.yaml  deployment.yaml  service.yaml
infra/k8s/base/guac/: deployment.yaml
infra/k8s/base/inventory/: deployment.yaml  service.yaml
infra/k8s/base/monitoring/: alerting-rules.yaml  servicemonitors.yaml
infra/k8s/base/notifications/: deployment.yaml  service.yaml
infra/k8s/base/orders/: deployment.yaml  service.yaml
infra/k8s/base/otel/: collector.yaml
infra/k8s/base/payments/: deployment.yaml  service.yaml
infra/k8s/base/policies/constraints/: allowed-registry.yaml  disallow-latest.yaml  required-labels.yaml  required-provenance.yaml  resource-limits.yaml
infra/k8s/base/policies/templates/: allowed-registry.yaml  disallow-latest.yaml  required-labels.yaml  required-provenance.yaml  resource-limits.yaml
infra/k8s/base/postgres/: postgres.yaml
infra/k8s/base/users/: deployment.yaml  service.yaml
infra/k8s/base/web/: deployment.yaml  service.yaml
infra/k8s/overlays/dev/: kustomization.yaml
infra/k8s/overlays/dev/patches/: gateway-service.yaml  web-ingress.yaml
infra/k8s/overlays/prod/: kustomization.yaml
infra/terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
infra/terraform/modules/artifact_registry/: main.tf  variables.tf
infra/terraform/modules/binary_authorization/: main.tf  variables.tf
infra/terraform/modules/cloudbuild/: main.tf  variables.tf
infra/terraform/modules/gke/: main.tf  variables.tf
infra/terraform/modules/kms/: main.tf  variables.tf
infra/terraform/modules/monitoring/: main.tf  variables.tf
infra/terraform/modules/network/: main.tf
infra/terraform/modules/secret_manager/: main.tf  variables.tf
infra/terraform/modules/service_accounts/: main.tf
scripts/: demo.sh  dev-seed.sh  doctor.sh  format.sh  generate-provenance.sh  generate-sbom.sh  kind-down.sh  kind-up.sh  lint.sh  publish-guac.sh  test-gatekeeper.sh  verify-attestations.sh  verify.sh
services/inventory/: BUILD.bazel  Dockerfile  pom.xml
services/inventory/src/main/java/com/example/inventory/: InventoryController.java
services/inventory/src/main/resources/: application.yml
services/inventory/src/test/java/com/example/inventory/: InventoryControllerTest.java
services/notifications/: BUILD.bazel  Cargo.toml  Dockerfile
services/notifications/src/: main.rs
services/orders/: BUILD.bazel  Dockerfile  requirements.txt
services/orders/app/: main.py  test_main.py
services/payments/: BUILD.bazel  Dockerfile  package.json
services/payments/src/: server.js
services/payments/test/: server.test.js
services/users/: BUILD.bazel
services/users/cmd/server/: main.go
services/users/internal/server/: BUILD.bazel  server.go  server_test.go
supply-chain/: README.md
supply-chain/cosign/: policy.md  policy.yaml  verify.sh
supply-chain/intoto/: layout.json
supply-chain/sbom/: generate-syft.toml  generate.sh
supply-chain/slsa/: provenance.json  verify.py
tests/: conftest.py
tests/demo/: test_client.py  test_config.py  test_diff.py  test_doctor.py  test_exporter.py  test_gateway.py  test_gateway_reports.py  test_gateway_validation.py  test_logging.py  test_metrics.py  test_plugins.py  test_policy.py  test_report.py  test_scenarios.py  test_simulator.py  test_storage.py  test_trace.py  test_validators.py  test_workflow.py
tests/e2e/: test_happy_path.py
tests/integration/: test_gateway.py
tests/smoke/: test_demo_smoke.py
(+9 files in other folders)
