module(name = "slsa_bazel_gke_reference", version = "0.2.0")

bazel_dep(name = "rules_python", version = "0.27.1")
bazel_dep(name = "rules_go", version = "0.44.0")
bazel_dep(name = "bazel_gazelle", version = "0.32.0")
bazel_dep(name = "rules_nodejs", version = "6.1.0")
bazel_dep(name = "rules_rust", version = "0.40.0")
bazel_dep(name = "rules_jvm_external", version = "4.6")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.21.5")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(version = "1.72.0")
module(name = "slsa_bazel_gke_reference", version = "0.1.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.21.5")
