load("@bazel_tools//tools/build_defs/proto:proto.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "platform_proto",
    srcs = ["platform.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "platform_go_proto",
    importpath = "github.com/example/slsa-bazel-gke-reference/api/gen/platform/v1",
    proto = ":platform_proto",
    visibility = ["//visibility:public"],
)
