[package]
name = "notifications"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4.31", features = ["clock", "std"] }
